fix: gitignoring GoogleServiceInfo

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ xcuserdata/
 timeline.xctimeline
 playground.xcworkspace
 
+## FireBase
+GoogleService-Info.plist
+
 # Swift Package Manager
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
 # Packages/
